[package]
name = "rms"
version = "0.1.0"
authors = ["mitchmindtree <mitchell.nordine@gmail.com>"]
description = "A simple type for calculating and storing the RMS given some buffer of interleaved audio samples."
readme = "README.md"
keywords = ["RMS", "dsp", "audio", "signal", "samples"]
license = "MIT"
repository = "https://github.com/RustAudio/rms.git"
homepage = "https://github.com/RustAudio/rms"

[dependencies]
dsp-chain = "*"
num = "*"
